--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-visit damask.mpie.de for installation and usage instructions
+DAMASK - The Düsseldorf Advanced Material Simulation Kit
+Visit damask.mpie.de for installation and usage instructions
 
 CONTACT INFORMATION
 
